# django-training

./: .gitignore  README.md  conftest.py  db.sqlite3  pyproject.toml
account/: forms.py  urls.py  views.py
album/: admin.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
album/migrations/: 0001_initial.py  0002_alter_album_release_at.py  0003_rename_isaccepted_album_is_accepted_and_more.py
album/tests/: test_endpoints.py  test_serialiazers.py
albums/: admin.py  forms.py  models.py  urls.py  validatots.py  views.py
albums/migrations/: 0001_initial.py  0002_album_isaccepted.py  0002_rename_creationdatetime_album_creationdate_and_more.py  0003_remove_album_creationdate_remove_album_releasedate_and_more.py  0004_album_release_at.py  0005_alter_album_name_alter_album_release_at.py  0006_alter_album_release_at.py  0007_alter_album_name_alter_album_release_at.py  0008_alter_album_release_at.py  0009_alter_album_release_at.py  0010_song_alter_album_release_at.py  0011_song_audio_file_alter_album_release_at_and_more.py  0012_alter_album_release_at_alter_song_audio_file.py  0013_alter_album_release_at_alter_song_audio_file.py  0014_alter_album_release_at_alter_song_image.py  (+1 more)
artist/: admin.py  models.py  serializers.py  urls.py  views.py
artists/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
authentication/: serializers.py  urls.py  views.py
musicplatform/: RESULTS.md  settings.py  urls.py
myScripts/: hima.py
users/: admin.py  forms.py  models.py  permissions.py  serializers.py  urls.py  views.py
(+15 files in other folders)
