[tool.poetry]
name = "django-training"
version = "0.1.0"
description = ""
authors = ["Ibrahim Ramadan Gad Hussien  <101700285+IbrahimRamadan0@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_training"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
